chore: 清理项目测试文件和更新.gitignore
- 删除过时的测试脚本（15+个test_*.py文件）
- 移除AI Studio相关的临时测试文件
- 更新.gitignore排除更新说明和临时测试脚本
- 保留项目主干代码，减少仓库冗余

删除的测试文件包括：
- scripts/下的临时分类和标准化测试
- tests/下的AI Studio功能测试脚本
- 其他临时测试文件

影响范围：
- .gitignore
- 删除21个测试/脚本文件

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ scripts/ernie_downloads.db
 scripts/paddle_attribution/*.csv
 scripts/paddle_attribution/*.png
 
+# Test files (development/debugging scripts, not part of core functionality)
+tests/
+scripts/test_*.py
+
 # Misc
 *.log
 *.tmp
